--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,8 +30,8 @@ jobs:
             - name: "Listing the directories"
               run: ls -A
 
-            - name: "Installing Dependencies"
-              run: pip install -r requirements.txt
+ #           - name: "Installing Dependencies"
+ #             run: pip install -r requirements.txt
 
             - name: "Runs Tests"
               run: python -m pytest test_app.py -v
