--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,7 @@ jobs:
               run: |
                 cd "C:\Users\91901\OneDrive\Desktop\Devops\CICD Project for Random_Jokes_Generator"
                 python -m pytest test_app.py -v
+              shell: cmd
               
               
 
