--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
               run: |
                  python -m pip install --upgrade pip
                  pip install pytest
-                 pip install flask pytest
+                 pip install flask
 
             - name: "Runs Tests"
               run: python -m pytest test_app.py -v
