CI/CD PIPELINES

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -33,5 +33,9 @@ jobs:
                 #it will help us to access the tokens in github repo
 
             - name: "Deploy to vercel"
-              run: vercel --prod --token=${{ secrets.VERCEL_TOKEN_FLASK }} --confirm --name=cicdproject 
+              run: vercel --prod --token=${{ secrets.VERCEL_TOKEN_FLASK }} --confirm --name=cicdproject --build-env FLASK_ENV=production
+
+                
+                
+                #vercel --prod --token=${#{ secrets.VERCEL_TOKEN_FLASK }} --confirm --name=cicdproject 
         
